# soltant-uno

./: Makefile.in  README.md  configure.ac
share/: cards_generate.c  client_sample.html
src/: Makefile.am  Makefile.in  cards.h  game.c  http.c  main.c  randoms.c  sol-string.c  soltant-uno.h  trie.c  uno.c  versions.c  websocket-communicate.c  websocket.c
