## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = soltant_uno

soltant_uno_SOURCES = \
	main.c \
	websocket.c \
	soltant-uno.h \
	versions.c \
	http.c \
	trie.c \
	sol-string.c \
	game.c

soltant_uno_LDFLAGS = 

soltant_uno_LDADD = 

